--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "cookie-parser": "^1.4.3",
+    "express-session": "^1.15.6",
     "jquery": "^3.3.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.5.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
